--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,4 @@
-AddHandler application/x-httpd-php5 .php
 RewriteEngine On
-RewriteCond %{HTTP_HOST} morrisprogramming\.com [NC]
-RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://morrisprogramming.com/$1 [R,L]
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]]
+ErrorDocument 404 http://www.morrisprogramming.com/404.php
